# P2r_grpc

./: .gitignore  CMakeLists.txt  CopyCMakeLists.txt  P2r_api.h  P2r_client.cc  P2r_client_example.c  P2r_example.c  P2r_server.cc  P2r_server_example.c  README.md  cmake_call.sh  cmake_call.txt  make.sh  make_clean.sh
api/: P2r_api.c  P2r_api.h  P2r_client_api.c  P2r_client_api.h  P2r_server_api.c  P2r_server_api.h
lib/: P2r_client.cc  P2r_server.cc
protobuf/: compiler.sh
protobuf/classes/: P2r.grpc.pb.cc  P2r.grpc.pb.h  P2r.pb.cc  P2r.pb.h
protobuf/proto/: P2r.asn1  P2r.proto  P2r.swagger.yaml
